--- a/order/view/seller.html
+++ b/order/view/seller.html
@@ -32,62 +32,57 @@
 
 <body ng-app="sellerApp" ng-controller="sellerCtrl">
 
-<div class="container-fluid">
-    <div class="page-header">
-        <h1>{{ml.seller}} <small></small></h1>
-    </div>
-    <div class="row">
-        <h3>{{ml.userOrder}}</h3>
-        <div class="col-sm-12" style="background-color:lavender;">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th ng-click="clickSort('time')" id='time'>{{ml.time}}</th>
-                        <th ng-click="clickSort('tablenumber')" id='tablenumber'>{{ml.tablenumber}}</th>
-                        <th>{{ml.order}}</th>
-                        <th ng-click="clickSort('status')" id='status'>{{ml.status}}</th>
-                        <th>{{ml.sum}}</th>
-                        <th>{{ml.action}}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="x in userorderresult">
-                        <td>{{ x.ftime }}</td>
-                        <td>{{ x.tablenumber }}</td>
-                        <td>
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>{{ml.name}}</th>
-                                        <th>{{ml.detal}}</th>
-                                        <th>{{ml.status}}</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat="y in x.order">
-                                        <td>{{ y.name }}</td>
-                                        <td>{{ y.price }} X {{ y.count }}</td>
-                                        <td>{{ y.status }}</td>
-                                        <td><button type="button" class="btn btn-info btn-xs" ng-click="completeOrderDetal(x,y)">{{ml.complete}}</button></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                        <td class="text-danger">{{ x.status }}</td>
-                        <td>{{ x.sum }}</td>
-                        <td>
-                            <div class="btn-group-vertical">
-                                <button type="button" class="btn btn-primary" ng-click="confirmOrder(x)">{{ml.confirm}}</button>
-                                <button type="button" class="btn btn-primary" ng-click="completeOrder(x)">{{ml.complete}}</button>
-                                <button type="button" class="btn btn-primary" ng-click="deleteOrder(x)">{{ml.del}}</button>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+<div class="page-header">
+    <h1>{{ml.seller}} <small></small></h1>
 </div>
+
+<h3>{{ml.userOrder}}</h3>
+<table class="table table-striped" style="background-color:lavender;">
+    <thead>
+        <tr>
+            <th ng-click="clickSort('time')" id='time'>{{ml.time}}</th>
+            <th ng-click="clickSort('tablenumber')" id='tablenumber'>{{ml.tablenumber}}</th>
+            <th>{{ml.order}}</th>
+            <th ng-click="clickSort('status')" id='status'>{{ml.status}}</th>
+            <th>{{ml.sum}}</th>
+            <th>{{ml.action}}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="x in userorderresult">
+            <td>{{ x.ftime }}</td>
+            <td>{{ x.tablenumber }}</td>
+            <td>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>{{ml.name}}</th>
+                            <th>{{ml.detal}}</th>
+                            <th>{{ml.status}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="y in x.order">
+                            <td>{{ y.name }}</td>
+                            <td>{{ y.price }} X {{ y.count }}</td>
+                            <td>{{ y.status }}</td>
+                            <td><button type="button" class="btn btn-info btn-xs" ng-click="completeOrderDetal(x,y)">{{ml.complete}}</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+            <td class="text-danger">{{ x.status }}</td>
+            <td>{{ x.sum }}</td>
+            <td>
+                <div class="btn-group-vertical">
+                    <button type="button" class="btn btn-primary" ng-click="confirmOrder(x)">{{ml.confirm}}</button>
+                    <button type="button" class="btn btn-primary" ng-click="completeOrder(x)">{{ml.complete}}</button>
+                    <button type="button" class="btn btn-primary" ng-click="deleteOrder(x)">{{ml.del}}</button>
+                </div>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
