--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -118,6 +118,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>{{ml.numberOfPeople}}</td>
+                        <td>
+                            <input type="text" class="form-control" ng-model="numberOfPeople">
+                        </td>
+                    </tr>
+                    <tr>
                         <td>{{ml.businessTime}}</td>
                         <td>
                             <input type="number" style="width: 50px" min="0" max="23" ng-model="businessStartHour">:
