[qrcode] add multi lang

--- a/order/view/qrcode.html
+++ b/order/view/qrcode.html
@@ -19,8 +19,8 @@
     <table class="table table-condensed" style="word-break:break-all; word-wrap:break-all;">
         <thead>
             <tr>
-                <th>桌號</th>
-                <th>QR code</th>
+                <th>{{ml.tablenumber}}</th>
+                <th>{{ml.qrcode}}</th>
             </tr>
         </thead>
         <tbody class="qrcode_show">
