[qrcode] 新增網址列表
	modified:   app.js
	modified:   static/angular/qrcodeApp.js
	modified:   static/angular/utils.js
	modified:   view/qrcode.html

--- a/order/view/qrcode.html
+++ b/order/view/qrcode.html
@@ -21,6 +21,7 @@
             <tr>
                 <th>{{ml.tablenumber}}</th>
                 <th>{{ml.qrcode}}</th>
+                <th>{{ml.url}}</th>
             </tr>
         </thead>
         <tbody class="qrcode_show">
