--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -110,7 +110,17 @@
         </div>
         <div class="tab-pane fade" id="list">
             <div class="panel panel-success">
-                <div class="panel-heading">{{ml.userOrder}} {{ml.list}}</div>
+                <div class="panel-heading">
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            {{month}}
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li ng-repeat="x in monthCount"><a href="#" ng-click='choice_month(x)'>{{x}}</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <table class="table table-striped" style="background-color:lavender;">
                     <thead>
                         <tr>
@@ -118,7 +128,7 @@
                             <th ng-click="clickSort('tablenumber')" id='tablenumber'>{{ml.tableStatus}}</th>
                             <th>{{ml.order}}</th>
                             <th ng-click="clickSort('status')" id='status'>{{ml.status}}</th>
-                            <th>{{ml.sum}}</th>
+                            <th ng-click="clickSort('sum')" id='sum'>{{ml.sum}}</th>
                         </tr>
                     </thead>
                     <tbody>
